# guessing_game

./: Cargo.toml  README.md
locales/: en.yaml  en.yml  fr.yaml  fr.yml  guessing_game.json
src/: main.rs
